2004-09-19 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/get_installed_version: Added vtab &
	  get_installed_version.

	* testsuite/libprometheus/choice: Added yes & no.

2004-09-18 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/libprometheus.bash.in: Re-ordered logging functions.

	* testsuite/libprometheus/log_echo: Added README, tyly_stdout,
	  tyly_stderr, logfile.txt, tyly_log, tyln_stdout, tyln_stderr,
	  tnly_stdout, tnly_stderr, tnly_log, tnln_stdout & tnln_stderr.

	* testsuite/libprometheus/log_warning: Added README, tyly_stdout,
	  tyly_stderr, logfile.txt, tyly_log, tyln_stdout, tyln_stderr,
	  tnly_stdout, tnly_stderr, tnly_log, tnln_stdout & tnln_stderr.

	* testsuite/README: Added more detail.

2004-09-16 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/libprometheus.bash.in (logged_failure): Added logging &
	  reporting of exit status of failed commands.
	* testsuite/libprometheus/log/*.txt: Updated expected output.

	* scripts/libprometheus.bash.in (log): Added `set -e' to logged command
	  subshell.
	* etc/REFERENCE.pkg: Removed unneeded `&&'s from functions.

2004-09-15 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/log: Added tnlycp_status, tnlycp_stdout,
	  tnlycp_stderr, tnlycp_log, tnlycp_log.txt, tnlncf_status,
	  tnlncf_stdout, tnlncf_stderr, tnlncf_stderr.txt, tnlncp_status,
	  tnlncp_stdout, tnlncp_stderr, tylycp_status, tylycp_stdout,
	  tylycp_stderr, tylycp_log, tylycf_status, tylycf_stdout,
	  tylycf_stdout.txt, tylycf_stderr, tylycf_log, tylycf_log.txt,
	  tylncp_status, tylncp_stdout, tylncp_stderr, tylncp_stderr.txt,
	  tylncf_status, tylncf_stdout, tylncf_stderr & tylncf_stderr.txt.

2004-09-14 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/log: Added tnlycf_status, tnlycf_stdout,
	  tnlycf_stderr, tnlycf_stderr.txt, tnlycf_log & tnlycf_log.txt.

2004-09-13 Gareth Jones <gareth_jones@users.berlios.de>
